--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,5 +8,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: iffy/install-nim@v5
+      - uses: extractions/setup-just@v2
+        env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: nimble install -y
       - run: nimble test
