--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,11 +6,10 @@ jobs:
   default:
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Clang
-      uses: egor-tensin/setup-clang@v1
-      with:
-          version: latest
-          platform: x64
+      - uses: egor-tensin/setup-clang@v1
+        with:
+            version: latest
+            platform: x64
       - uses: actions/checkout@v2
       - uses: iffy/install-nim@v5
       - uses: extractions/setup-just@v2
