--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,10 +6,9 @@ jobs:
   default:
     runs-on: ubuntu-latest
     steps:
-      - uses: egor-tensin/setup-clang@v1
-        with:
-            version: latest
-            platform: x64
+      - name: Install Dependencies
+        run: sudo apt-get install libclang-dev llvm
+    steps:
       - uses: actions/checkout@v2
       - uses: iffy/install-nim@v5
       - uses: extractions/setup-just@v2
