--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -6,9 +6,7 @@ jobs:
   default:
     runs-on: ubuntu-latest
     steps:
-      - name: Install Dependencies
-        run: sudo apt-get install libclang-dev llvm
-    steps:
+      - uses: egor-tensin/setup-clang@v1
       - uses: actions/checkout@v2
       - uses: iffy/install-nim@v5
       - uses: extractions/setup-just@v2
