put token to global

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,6 +2,8 @@ on:
   pull_request:
   push:
 
+env:
+    GH_TOKEN: ${{ secrets.SecretToken }}
 jobs:
   default:
     runs-on: ubuntu-latest
@@ -9,11 +11,10 @@ jobs:
       - uses: egor-tensin/setup-clang@v1
       - uses: actions/checkout@v2
       - uses: iffy/install-nim@v5
+      - uses: opt-nc/setup-duckdb-action@v1.0.8
       - uses: extractions/setup-just@v2
-        env:
-         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Install dependencies
         run: |
-          sudo apt install clang libclang-dev duckdb
+          sudo apt install clang libclang-dev
       - run: nimble install -y
       - run: just test
