--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,9 +12,12 @@ jobs:
       - uses: actions/checkout@v2
       - uses: iffy/install-nim@v5
       - uses: opt-nc/setup-duckdb-action@v1.0.8
-      - uses: extractions/setup-just@v2
-      - name: Install dependencies
-        run: |
-          sudo apt install clang libclang-dev
-      - run: nimble install -y
-      - run: just test
+        with:
+        version: v1.1.2
+      -run: sudo find / -name "*duckdb*.so*" 2>/dev/null
+      # - uses: extractions/setup-just@v2
+      # - name: Install dependencies
+      #   run: |
+      #     sudo apt install clang libclang-dev
+      # - run: nimble install -y
+      # - run: just test
