actions download and unzip, small tweaks

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,5 +14,11 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt install clang libclang-dev
+      - name: wget
+        uses: wei/wget@v1
+        with:
+         args: https://github.com/duckdb/duckdb/releases/download/v1.1.2/libduckdb-linux-amd64.zip
+      - name: Extract some files
+        run: 7z x libduckdb-linux-amd64.zip
       - run: nimble install -y
-      - run:
+      - run: nimble test
