--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -14,6 +14,9 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt install clang libclang-dev
+      - uses: opt-nc/setup-duckdb-action@v1.0.8
+        with:
+         version: v1.1.2
       - name: wget
         uses: wei/wget@v1
         with:
