--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,5 +23,12 @@ jobs:
          args: https://github.com/duckdb/duckdb/releases/download/v1.1.2/libduckdb-linux-amd64.zip
       - name: Extract some files
         run: 7z x libduckdb-linux-amd64.zip
+      # Install DuckDB
+      - name: Install DuckDB
+        run: |
+          wget https://github.com/duckdb/duckdb/releases/download/v0.9.2/libduckdb-linux-amd64.zip
+          unzip libduckdb-linux-amd64.zip
+          sudo mv libduckdb.so /usr/lib/
+          sudo ldconfig
       - run: nimble install -y
       - run: nimble test
