--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,17 +12,17 @@ jobs:
         version:
           - binary:stable
           - devel
-          - binary:2.0.2
-          - binary:2.2.0
         os:
           - ubuntu-latest
-          - macOS-13
     steps:
     - uses: actions/checkout@v2
     - uses: iffy/install-nim@v5
       with:
         version: ${{ matrix.version }}
     - uses: extractions/setup-just@v2
+    - name: Install dependencies
+      run: |
+        sudo apt install clang libclang-dev
     # Install DuckDB
     - name: Install DuckDB
       run: |
