--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -14,6 +14,9 @@ jobs:
     - name: Set up Nim
       uses: iffy/install-nim@v5
 
+    - name: Install clang dependencies
+      run: |
+        sudo apt install clang libclang-dev
 
     - name: Install DuckDB
       run: |
