--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,7 +34,8 @@ jobs:
     - name: Generate documentation
       run: |
         # Or if using direct nimble command
-        nim doc --project --index:on --docRoot:src --out:docs src/nimdrake.nim
+        nimble doc --project --out:docs src/nimdrake.nim
+        mv docs/nimdrake.html docs/index.html
         touch docs/.nojekyll
 
     - name: Deploy to GitHub Pages
