--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Generate documentation
       run: |
         # Or if using direct nimble command
-        nimble doc --project --out:docs src/nimdrake.nim
+        nimble docs
         mv docs/nimdrake.html docs/index.html
         touch docs/.nojekyll
 
