Formatting changes, new experimental macro for vector fields, aggregate function WIP

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -34,5 +34,5 @@ jobs:
     - name: Test and Benchmark
       run: |
         nimble install -y
-        just test
+        just test "true"
         # just benchmark
